# letmesolo

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp
src/core/: constants.h  errors.h  linalg.cpp  linalg.h  matrix.cpp  matrix.h  placeholder.cpp  test_linalg.cpp
src/io/: matrix_input.cpp  matrix_input.h  matrix_print.cpp  matrix_print.h  placeholder.cpp
src/report/: info_step.cpp  placeholder.cpp  property_step.cpp  property_step.h  report_runner.cpp  report_runner.h  step.h  step_runner.cpp  step_runner.h  step_timer.h  transform_step.cpp  transform_step.h
src/util/: placeholder.cpp  value_printer.cpp  value_printer.h
tests/: test_input.cpp  test_print.cpp
